--- a/app/templates/demos.html
+++ b/app/templates/demos.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row" style="padding: 2em;">
-    <div class="col-5">
+    <div class="col-8">
         <div class="row">
             <div class="col"></div>
             <div id="staging" class="staging col">
@@ -16,7 +16,7 @@
         <div class="row bin-row">
             {% for bin_id in range(num_bins) %}
             <div id="bin{{bin_id}}" class="bin col">
-                {% if correct_bin == bin_id %}
+                {% if correct_bin[bin_id] %}
                 <div class="card obj" style="width: 8rem;">
                     <img class="card-img-top" src="../static/cards/{{card}}.png">
                 </div>
@@ -25,7 +25,7 @@
             {% endfor %}
         </div>
     </div>
-    <div class="col-7">
+    <div class="col-4">
         <div class="row">
             <div class="col-7">
                 <img class="card-img-top w-100" style="padding: 0.5em;" src="../static/peach_static.png">
