--- a/app/templates/consent.html
+++ b/app/templates/consent.html
@@ -41,6 +41,51 @@
 <p>Your participation in this research is voluntary. You may discontinue participation at any time during the research activity. By continuing, you certify that you have read and understood the information above and want to participate in this research.</p>
 
 <form action="" method="post">
+    <div style="padding: 1em; margin: 1em;">
+        <h4>Please select your age</h4>
+        {% for subfield in form.age %}
+        <div class="form-check form-check-inline">
+            {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+        </div>
+        {% endfor %} {% for error in form.age.errors %}
+        <span style="color: red;">{{ error }}</span> {% endfor %}
+    </div>
+    <div style="padding: 1em; margin: 1em;">
+        <h4>Please select the gender that you identify best with.</h4>
+        {% for subfield in form.gender %}
+        <div class="form-check form-check-inline">
+            {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+        </div>
+        {% endfor %} {% for error in form.gender.errors %}
+        <span style="color: red;">{{ error }}</span> {% endfor %}
+    </div>
+    <div style="padding: 1em; margin: 1em;">
+        <h4>Please select the ethnicity you identify best with.</h4>
+        {% for subfield in form.ethnicity %}
+        <div class="form-check">
+            {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+        </div>
+        {% endfor %} {% for error in form.ethnicity.errors %}
+        <span style="color: red;">{{ error }}</span> {% endfor %}
+    </div>
+    <div style="padding: 1em; margin: 1em;">
+        <h4>Please select the highest level of school you have completed or the highest degree you have received.</h4>
+        {% for subfield in form.education %}
+        <div class="form-check">
+            {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+        </div>
+        {% endfor %} {% for error in form.education.errors %}
+        <span style="color: red;">{{ error }}</span> {% endfor %}
+    </div>
+    <div style="padding: 1em; margin: 1em;">
+        <h4>How familiar are you with robots?</h4>
+        {% for subfield in form.robot %}
+        <div class="form-check form-check-inline">
+            {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+        </div>
+        {% endfor %} {% for error in form.robot.errors %}
+        <span style="color: red;">{{ error }}</span> {% endfor %}
+    </div>
     {{ form.hidden_tag() }} {{ form.submit_consent(class="btn btn-primary btn-lg w-100") }}
 </form>
 
