--- a/app/templates/survey.html
+++ b/app/templates/survey.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
-<h1>Survey</h1>
+<h1>Survey {{round+1}}</h1>
 
 <form action="" method="post">
     {{ form.hidden_tag() }}
