--- a/app/templates/trials.html
+++ b/app/templates/trials.html
@@ -67,75 +67,10 @@
             {% endfor %} -->
             <span class="invisible">{{ form.submit_trial(class="btn btn-dark btn-lg w-100") }}</span>
             <span class="invisible">{{ form.chosen_bin(cols=32, rows=4) }} </span>
+            <span class="invisible">{{ form.start_time(cols=32, rows=4) }} </span>
         </form>
     </div>
 </div>
-
-<!-- <div class="row" style="padding: 2em;">
-    <div class="col-8">
-        <div class="row">
-            <div class="col"></div>
-            <div id="staging" class="staging col">
-                <div class="card obj" style="width: 8rem; border: 5px solid black;">
-                    <img class="card-img-top" src="../static/cards/{{card}}.png">
-                </div>
-            </div>
-            <div class="col"></div>
-        </div>
-        <div class="row bin-row">
-            {% for bin_id in range(num_bins) %}
-            <div id="bin{{bin_id}}" class="bin col">
-                <div class="col-6" style="float:left;">
-                    {% for card_id in range(previous_cards[bin_id]|length) %} {% if card_id % 2 == 1 %}
-                    <div class="card obj prev-card" style="width: 8rem">
-                        <img class="card-img-top" style="opacity: 0.6;" src="../static/cards/{{previous_cards[bin_id][card_id]}}.png">
-                    </div>
-                    {% endif %} {% endfor %}
-                </div>
-                <div class="col-6" style="float:right;">
-                    {% for card_id in range(previous_cards[bin_id]|length) %} {% if card_id % 2 == 0 %}
-                    <div class="card obj prev-card" style="width: 8rem">
-                        <img class="card-img-top" style="opacity: 0.6;" src="../static/cards/{{previous_cards[bin_id][card_id]}}.png">
-                    </div>
-                    {% endif %} {% endfor %}
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        <div class="row">
-            <div class="col">
-                <button type="button" class="btn btn-dark w-100" id="submit_choice_btn" onclick="showFeedback()">Submit
-                    Choice</button>
-            </div>
-        </div>
-
-    </div>
-    <div class="col-4">
-        <div class="row">
-            <div class="col-7">
-                <img id="robot" class="card-img-top w-100" style="padding: 0.5em;" src="../static/peach_1.png">
-            </div>
-            <div class="col-5">
-                <div class="card w-100" style="padding: 0.5em;">
-                    <div class="card-body" id="feedback_text">
-                        Choose the bin you think the card belongs in
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <form action="" method="post">
-            {{ form.hidden_tag() }}
-
-            {% for error in form.chosen_bin.errors %}
-                <div class="alert alert-danger" role="alert">{{ error }}</div>
-            {% endfor %}
-{{ form.submit_trial(class="btn btn-dark btn-lg w-100") }}
-<span class="invisible">{{ form.chosen_bin(cols=32, rows=4) }} </span>
-</form>
-
-</div>
-</div> -->
 
 <script src="../static/trials_script.js"></script>
 {% endblock %}
