Video Choices and Condition Update

--- a/app/templates/demos.html
+++ b/app/templates/demos.html
@@ -35,7 +35,7 @@
     </div>
     <div class="col">
         <video class="robot-video z-depth-1" autoplay loop controls muted>
-            <source src="../static/robot/neutral.mp4" type="video/mp4" />
+            <source src="../static/robot/{{ vid_name }}.mp4" type="video/mp4" />
         </video>
     </div>
     <div class="col-3">
