--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %} {% block content %}
 <h1>Sign In</h1>
+
+<p>If you have already begun a survey, please enter your Prolific ID and password to continue. You must complete the entire survey to be compensated. If you have not created an account or started the survey, please proceed to the Register Page.</p>
+
 <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
     <p>
