--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %} {% block content %}
 <h1>Register</h1>
+
+<p>If you have not already registered for an account, please do so here. You must use your Prolific ID as your username so we can associate your response with your Prolific account. If you already have an account, please proceed to the Login Page.</p>
+
 <form action="" method="post">
     {{ form.hidden_tag() }}
     <p>
