--- a/app/templates/trials.html
+++ b/app/templates/trials.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %} {% block content %}
 <h1>Trials - Round {{round+1}}</h1>
+
+<p><b>Instructions: </b>Now it's your turn! Drag the card into the bin you think it belongs in. When you are ready to check your answer, click the Submit Choice button.</p>
+
+<p>The robot will give you feedback on your answer, and then will take you to the next trail. Note that it may take a few seconds for the robot to process your answer and to generate the next card.</p>
+
 <div class="progress" style="height: 50px">
     <div class="progress-bar" role="progressbar" style="width: {{ num_completed_trials/num_trials*100 }}%;" aria-valuenow="{{num_completed_trials}}" aria-valuemin="0" aria-valuemax="{{num_trials}}">
         {{num_completed_trials}} out of {{num_trials}}</div>
