--- a/app/templates/consent.html
+++ b/app/templates/consent.html
@@ -1,16 +1,18 @@
 {% extends "base.html" %} {% block content %}
 <h1>Online Consent for Participation in Research</h1>
 
-<p>This pilot study is for a final project for the Human-Robot Interaction course at Carnegie Mellon University (Fall 2020).</p>
-
-<h2>Procedures</h2>
+<p>This study is part of a research study conducted by Dr. Reid Simmons at Carnegie Mellon University, and is funded by NSF.</p>
 
 <p>The purpose of the research is to evaluate and compare different behaviors for robots.</p>
 
-<h2>Participant Requirements</h2>
+<h2>Procedures</h2>
 
 <p>You will be asked to view demonstrations of a sorting game with a robot helping to understand the rules. You will then be asked to play the sorting game with the robot providing feedback after each turn. You will finally complete a questionnaire about
-    your experience with this system.</p>
+    your experience with this system. We will be recording your <b>facial features</b> as you play the game. </p>
+
+<h2>Participant Requirements</h2>
+
+You must be above the age of 18.
 
 <h2>Risks</h2>
 
@@ -22,23 +24,28 @@
 
 <h2>Compensation and Costs</h2>
 
-<p>You will be <b>not</b> be compensated for participating in this study. There will be no cost to you if you participate in this study.</p>
+<p>You will be compensated for participating in this study at a competitive online rate. There will be no cost to you if you participate in this study.</p>
 
 <h2>Confidentiality</h2>
 
-<p>The data captured for the research does not include any personally identifiable information about you. Your IP address will not be captured.</p>
+<p>The data captured for the research includes recording facial features as you play the game. We will be <b>processing the images from the webcam into numerical data with no identifying information</b>. All images will be stored securely, and your IP address
+    will not be captured.</p>
 
 <h2>Right to Ask Questions and Contact Information</h2>
 
-<p>If you have any questions about this study, you should feel free to ask them by contacting Roshni Kaushik at roshnika@andrew.cmu.edu.</p>
+<p>If you have any questions about this study, you should feel free to ask them by contacting the Principal Investigator now at the address below. If you have questions later, desire additional information, or wish to withdraw your participation, please
+    contact the Principal Investigator.</p>
 
-<p>If you have questions pertaining to your rights as a research participant; or to report concerns to this study, you should contact the Office of Research integrity and Compliance at Carnegie Mellon University.</p>
+<p>Dr. Reid Simmons, The Robotics Institute, Carnegie Mellon University, 5000 Forbes Avenue, Pittsburgh PA 15213. rsimmons@andrew.cmu.edu </p>
 
-<p>Email: irbreview@andrew.cmu.edu<br> Phone: 412-268-1901 or 412-268-5460. </p>
+<p>If you have questions pertaining to your rights as a research participant; or to report concerns to this study, you should contact the Office of Research integrity and Compliance at Carnegie Mellon University. Email: irbreview@andrew.cmu.edu, Phone: 412-268-1901
+    or 412-268-5460. </p>
 
 <h2>Voluntary Participation</h2>
 
 <p>Your participation in this research is voluntary. You may discontinue participation at any time during the research activity. By continuing, you certify that you have read and understood the information above and want to participate in this research.</p>
+
+<h2>Demographic Information and Consent Confirmation</h2>
 
 <form action="" method="post">
     <div style="padding: 1em; margin: 1em;">
