--- a/app/templates/demos.html
+++ b/app/templates/demos.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %} {% block content %}
 <h1>Demonstrations - Round {{round+1}}</h1>
+
+<p><b>Instructions: </b>Here is a new rule! The robot will play a few cards to give you a head start in learning the rule.</p>
+
+<p>Try to find a pattern in which card belongs in which bin! When you are ready to see the next card, click the Next Card button.</p>
+
+
 <div class="progress" style="height: 50px">
     <div class="progress-bar" role="progressbar" style="width: {{ num_completed_demos/num_demos*100 }}%;" aria-valuenow="{{num_completed_demos}}" aria-valuemin="0" aria-valuemax="{{num_demos}}">
         {{num_completed_demos}} out of {{num_demos}}</div>
@@ -11,7 +17,7 @@
     </div>
 </div>
 <div class="row" style="min-height: 40%">
-    <div class="col-5">
+    <div class="col-3">
         <div id="bin0" class="bin col">
             <div class="left-bin col-6">
                 {% if correct_bin[0] %}
@@ -34,11 +40,11 @@
         </div>
     </div>
     <div class="col">
-        <!-- <video class="robot-video z-depth-1" autoplay loop controls muted>
-            <source src="../static/robot/neutral.mp4" type="video/mp4" />
-        </video> -->
+        <video class="robot-video z-depth-1" autoplay loop controls muted>
+            <source src="../static/robot/{{ vid_name }}.mp4" type="video/mp4" />
+        </video>
     </div>
-    <div class="col-5">
+    <div class="col-3">
         <div id="bin1" class="bin col">
             <div class="left-bin col-6">
                 {% if correct_bin[1] %}
