--- a/app/templates/trials.html
+++ b/app/templates/trials.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %} {% block content %}
 <h1>Trials - Round {{round+1}}</h1>
+
+<p><b>Instructions: </b>Now it's your turn! Drag the card into the bin you think it belongs in. When you are ready to check your answer, click the Submit Choice button.</p>
+
+<p>The robot will give you feedback on your answer, and then will take you to the next card. Note that it may take a few seconds for the robot to process your answer and to generate the next card.</p>
+
+
 <div class="progress" style="height: 50px">
     <div class="progress-bar" role="progressbar" style="width: {{ num_completed_trials/num_trials*100 }}%;" aria-valuenow="{{num_completed_trials}}" aria-valuemin="0" aria-valuemax="{{num_trials}}">
         {{num_completed_trials}} out of {{num_trials}}</div>
@@ -12,8 +18,8 @@
         </div>
     </div>
 </div>
-<div class="row" style="min-height: 40%">
-    <div class="col-5">
+<div class="row">
+    <div class="col-3">
         <div id="bin0" class="bin col">
             <div class="left-bin col-6">
                 {% for card_id in range(previous_cards[0]|length) %} {% if card_id % 2 == 1 %}
@@ -32,11 +38,11 @@
         </div>
     </div>
     <div class="col">
-        <!-- <video id="robot-video" class="robot-video z-depth-1" autoplay loop muted>
-            <source id="robot-video-source" src="../static/robot/neutral.mp4" type="video/mp4" />
-        </video> -->
+        <video id="robot-video" class="robot-video z-depth-1" autoplay loop muted>
+            <source id="robot-video-source" src="../static/robot/{{vid_name}}.mp4" type="video/mp4" />
+        </video>
     </div>
-    <div class="col-5">
+    <div class="col-3">
         <div id="bin1" class="bin col">
             <div class="left-bin col-6">
                 {% for card_id in range(previous_cards[1]|length) %} {% if card_id % 2 == 1 %}
@@ -74,7 +80,11 @@
             {% endfor %}
             <span class="invisible">{{ form.submit_trial(class="btn btn-dark btn-lg w-100") }}</span>
             <span class="invisible">{{ form.chosen_bin(cols=32, rows=4) }} </span>
+            <span class="invisible">{{ form.feedback_chosen(cols=32, rows=4) }} </span>
         </form>
+        <span class="invisible" id='correct_bin'>{{correct_bin}}</span>
+        <span class="invisible" id='correct_vid_name'>{{correct_vid_name}}</span>
+        <span class="invisible" id='incorrect_vid_name'>{{incorrect_vid_name}}</span>
     </div>
 </div>
 
