--- a/app/templates/consent.html
+++ b/app/templates/consent.html
@@ -1,98 +1,115 @@
 {% extends "base.html" %} {% block content %}
-<h1>Online Consent for Participation in Research</h1>
 
-<p>This study is part of a research study conducted by Dr. Reid Simmons at Carnegie Mellon University, and is funded by NSF.</p>
+<div id="consent">
+    <h1>Online Consent for Participation in Research</h1>
 
-<p>The purpose of the research is to evaluate and compare different behaviors for robots.</p>
+    <p>This study is part of a research study conducted by Dr. Reid Simmons at Carnegie Mellon University, and is funded by NSF.</p>
 
-<h2>Procedures</h2>
+    <p>The purpose of the research is to evaluate and compare different behaviors for robots.</p>
 
-<p>You will be asked to view demonstrations of a sorting game with a robot helping to understand the rules. You will then be asked to play the sorting game with the robot providing feedback after each turn. You will finally complete a questionnaire about
-    your experience with this system.</p>
+    <h2>Procedures</h2>
 
-<h2>Participant Requirements</h2>
+    <p>You will be asked to view demonstrations of a sorting game with a robot helping to understand the rules. You will then be asked to play the sorting game with the robot providing feedback after each turn. You will finally complete a questionnaire about
+        your experience with this system.</p>
 
-You must be above the age of 18.
+    <h2>Participant Requirements</h2>
 
-<h2>Risks</h2>
+    You must be above the age of 18.
 
-<p>The risks and discomfort associated with participation in this study are no greater than those ordinarily encountered in daily life.</p>
+    <h2>Risks</h2>
 
-<h2>Benefits</h2>
+    <p>The risks and discomfort associated with participation in this study are no greater than those ordinarily encountered in daily life.</p>
 
-<p>There may be no personal benefit from your participation in the study but the knowledge received may be of value to Robotics research at Carnegie Mellon University.</p>
+    <h2>Benefits</h2>
 
-<h2>Compensation and Costs</h2>
+    <p>There may be no personal benefit from your participation in the study but the knowledge received may be of value to Robotics research at Carnegie Mellon University.</p>
 
-<p>You will be compensated for participating in this study at a competitive online rate. There will be no cost to you if you participate in this study.</p>
+    <h2>Compensation and Costs</h2>
 
-<h2>Confidentiality</h2>
+    <p>You will be compensated for participating in this study at a competitive online rate. There will be no cost to you if you participate in this study.</p>
 
-<p>The data captured for the research does not include any personally identifiable information about you. Your IP address will not be captured.</p>
+    <h2>Confidentiality</h2>
 
-<h2>Right to Ask Questions and Contact Information</h2>
+    <p>The data captured for the research does not include any personally identifiable information about you. Your IP address will not be captured.</p>
 
-<p>If you have any questions about this study, you should feel free to ask them by contacting the Principal Investigator now at the address below. If you have questions later, desire additional information, or wish to withdraw your participation, please
-    contact the Principal Investigator.</p>
+    <h2>Right to Ask Questions and Contact Information</h2>
 
-<p>Dr. Reid Simmons, The Robotics Institute, Carnegie Mellon University, 5000 Forbes Avenue, Pittsburgh PA 15213. rsimmons@andrew.cmu.edu </p>
+    <p>If you have any questions about this study, you should feel free to ask them by contacting the Principal Investigator now at the address below. If you have questions later, desire additional information, or wish to withdraw your participation, please
+        contact the Principal Investigator.</p>
 
-<p>If you have questions pertaining to your rights as a research participant; or to report concerns to this study, you should contact the Office of Research integrity and Compliance at Carnegie Mellon University. Email: irbreview@andrew.cmu.edu, Phone: 412-268-1901
-    or 412-268-5460. </p>
+    <p>Dr. Reid Simmons, The Robotics Institute, Carnegie Mellon University, 5000 Forbes Avenue, Pittsburgh PA 15213. rsimmons@andrew.cmu.edu </p>
 
-<h2>Voluntary Participation</h2>
+    <p>If you have questions pertaining to your rights as a research participant; or to report concerns to this study, you should contact the Office of Research integrity and Compliance at Carnegie Mellon University. Email: irbreview@andrew.cmu.edu, Phone:
+        412-268-1901 or 412-268-5460. </p>
 
-<p>Your participation in this research is voluntary. You may discontinue participation at any time during the research activity. By continuing, you certify that you have read and understood the information above and want to participate in this research.</p>
+    <h2>Voluntary Participation</h2>
 
-<h2>Demographic Information and Consent Confirmation</h2>
-
-<form action="" method="post">
+    <p>Your participation in this research is voluntary. You may discontinue participation at any time during the research activity. By continuing, you certify that you have read and understood the information above and want to participate in this research.</p>
     <div style="padding: 1em; margin: 1em;">
-        <h4>Please select your age</h4>
-        {% for subfield in form.age %}
-        <div class="form-check form-check-inline">
-            {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
-        </div>
-        {% endfor %} {% for error in form.age.errors %}
-        <span style="color: red;">{{ error }}</span> {% endfor %}
+        <button type="button" class="btn btn-primary" onclick="hideconsent()">I have read and understood the information above and want to participate in this research.</button>
     </div>
-    <div style="padding: 1em; margin: 1em;">
-        <h4>Please select the gender that you identify best with.</h4>
-        {% for subfield in form.gender %}
-        <div class="form-check form-check-inline">
-            {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+
+</div>
+
+<script>
+    function hideconsent() {
+        document.getElementById("consent").hidden = true;
+        document.getElementById("demographics").hidden = false;
+    }
+</script>
+
+<div id="demographics" hidden>
+    <h2>Demographic Information and Consent Confirmation</h2>
+
+    <form action="" method="post">
+        <div style="padding: 1em; margin: 1em;">
+            <h4>Please select your age</h4>
+            {% for subfield in form.age %}
+            <div class="form-check form-check-inline">
+                {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+            </div>
+            {% endfor %} {% for error in form.age.errors %}
+            <span style="color: red;">{{ error }}</span> {% endfor %}
         </div>
-        {% endfor %} {% for error in form.gender.errors %}
-        <span style="color: red;">{{ error }}</span> {% endfor %}
-    </div>
-    <div style="padding: 1em; margin: 1em;">
-        <h4>Please select the ethnicity you identify best with.</h4>
-        {% for subfield in form.ethnicity %}
-        <div class="form-check">
-            {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+        <div style="padding: 1em; margin: 1em;">
+            <h4>Please select the gender that you identify best with.</h4>
+            {% for subfield in form.gender %}
+            <div class="form-check form-check-inline">
+                {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+            </div>
+            {% endfor %} {% for error in form.gender.errors %}
+            <span style="color: red;">{{ error }}</span> {% endfor %}
         </div>
-        {% endfor %} {% for error in form.ethnicity.errors %}
-        <span style="color: red;">{{ error }}</span> {% endfor %}
-    </div>
-    <div style="padding: 1em; margin: 1em;">
-        <h4>Please select the highest level of school you have completed or the highest degree you have received.</h4>
-        {% for subfield in form.education %}
-        <div class="form-check">
-            {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+        <div style="padding: 1em; margin: 1em;">
+            <h4>Please select the ethnicity you identify best with.</h4>
+            {% for subfield in form.ethnicity %}
+            <div class="form-check">
+                {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+            </div>
+            {% endfor %} {% for error in form.ethnicity.errors %}
+            <span style="color: red;">{{ error }}</span> {% endfor %}
         </div>
-        {% endfor %} {% for error in form.education.errors %}
-        <span style="color: red;">{{ error }}</span> {% endfor %}
-    </div>
-    <div style="padding: 1em; margin: 1em;">
-        <h4>How familiar are you with robots?</h4>
-        {% for subfield in form.robot %}
-        <div class="form-check form-check-inline">
-            {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+        <div style="padding: 1em; margin: 1em;">
+            <h4>Please select the highest level of school you have completed or the highest degree you have received.</h4>
+            {% for subfield in form.education %}
+            <div class="form-check">
+                {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+            </div>
+            {% endfor %} {% for error in form.education.errors %}
+            <span style="color: red;">{{ error }}</span> {% endfor %}
         </div>
-        {% endfor %} {% for error in form.robot.errors %}
-        <span style="color: red;">{{ error }}</span> {% endfor %}
-    </div>
-    {{ form.hidden_tag() }} {{ form.submit_consent(class="btn btn-primary btn-lg w-100") }}
-</form>
+        <div style="padding: 1em; margin: 1em;">
+            <h4>How familiar are you with robots?</h4>
+            {% for subfield in form.robot %}
+            <div class="form-check form-check-inline">
+                {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }}
+            </div>
+            {% endfor %} {% for error in form.robot.errors %}
+            <span style="color: red;">{{ error }}</span> {% endfor %}
+        </div>
+        {{ form.hidden_tag() }} {{ form.submit_consent(class="btn btn-primary btn-lg w-100") }}
+    </form>
+</div>
+
 
 {% endblock %}
