added new features

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,7 +40,14 @@
     {% if consent %}
     <meta id='consent' data = '{{ consent }}'>
     {% endif %}
-    <video id="myVideo" width="320" height="240" autoplay></video>
+    {% if userid %}
+    <meta id='userid' data = '{{ userid }}'>
+    {% endif %}
+    <div class="recording" id = "recordButton">●</div>
+    <video id="myVideo" class = "center" width="320" height="180" autoplay></video>
+  
+        
+  
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
