--- a/app/templates/training.html
+++ b/app/templates/training.html
@@ -1,61 +1,126 @@
 {% extends "base.html" %} {% block content %}
 <h1>Familiarizing Yourself with the Game</h1>
 
-<p>This page will explain how this game works.</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false" data-wrap="false">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="13"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">Let's go over how this study will work. Click the arrow on the right to go to the next screen.
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">You will be playing a sorting game where you place each card in either the left bin or the right bin.
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">The cards have four different properties: color, number, shape, and shading. These properties determine which bin the card belongs in based on a rule.
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">Meet the robot who will help you through the game.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">We will be recording your facial features as you play the game. You have already checked that your camera is working.
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">Let's go over what you will be doing. You will be playing the game through 2 times, with a different rule each time.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">The robot will choose a rule and will play a few rounds of the game.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">Then it will be your turn to play! Make your best guess about where the card goes. Drag it to either the left or right bin.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">You will choose how confident you are in your choice.
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">The robot will give you feedback about whether you got it right. And then you will sort another card.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">After you finish sorting all the cards, you will complete a short survey about your experience.
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">After the survey, the robot will give you a new rule to learn.
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <p style="color:black;">After playing the game twice, you will receive a random code to enter into Prolific so you receive credit for completing this survey.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../static/train_0.png">
+            <div class="carousel-caption d-none d-md-block">
+                <form action="" method="post">
+                    {{ form.hidden_tag() }} {{ form.submit_training(class="btn btn-primary btn-lg w-100") }}
+                </form>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 
-<h2>The Cards</h2>
-<div class="row">
-    <div class="col training-text">
-        The cards used in the game are from the game Set and have a series of properties.
-        <ul>
-            <li>Number of Shapes: 1, 2, 3</li>
-            <li>Shading: open, striped, solid</li>
-            <li>Type of Shape: diamond, oval, squiggle</li>
-            <li>Color: red, green, purple</li>
-        </ul>
-    </div>
-    <div class="col">
-        <img src="../static/training_cards.png" class="w-100">
-        <p>Image from: <a href="">https://geekandsundry.com/the-card-game-that-puzzled-mathematicians-for-decades/</a></p>
-    </div>
-</div>
-<hr/>
-<h2>The Game</h2>
-<div class="row">
-    <div class="col">
-        <img src="../static/training_game.png" class="w-100">
-    </div>
-    <div class="col training-text">
-        The game consists of two colored bins (red and orange) that you must sort the cards into based on their properties.
-    </div>
-</div>
-<hr/>
-<h2>The Demonstration Phase</h2>
-<div class="row">
-    <div class="col-4 training-text">
-        You have a helper robot who will start by demonstrating where several cards belong. Pay attention here because it will give you clues as to the rules for which card goes where!
-    </div>
-    <div class="col-8">
-        <img src="../static/training_demo.png" class="w-100">
-    </div>
-</div>
-<hr/>
-<h2>The Trial Phase</h2>
-<span class="training-text">
-    During the trials, you get to choose where each card goes (left). Your helper robot may give you some feedback after each attempt to help you improve (right).
-</span>
-<br>
-<div class="row">
-    <div class="col">
-        <img src="../static/training_trials_1.png" class="w-100">
-    </div>
-    <div class="col">
-        <img src="../static/training_trials_2.png" class="w-100">
-    </div>
-</div>
-<hr/>
-<form action="" method="post">
-    {{ form.hidden_tag() }} {{ form.submit_training(class="btn btn-primary btn-lg w-100") }}
-</form>
-
-{% endblock %}
+<hr/> {% endblock %}
